<resources>
    <string name="app_name">Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment lifestyle</string>
    <string name="category_name">Categoty Name</string>
    <string name="category_description">Category_Description</string>
    <string name="to_profile">Ke halaman profile activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_coach">Siapa coach pilihanmu?</string>
    <string name="beta_wulandari">Beta Wulandari</string>
    <string name="yosima_dhea">Yosima Dhea</string>
    <string name="reza_mauwity">Reza Mauwity</string>
    <string name="muhammad_setiawan">Muhammad Setiawan</string>
    <string name="choose">Pilih</string>
    <string name="close">Close</string>
</resources>